todos and sh